--- a/partials/api/utilityService.batchProcess.html
+++ b/partials/api/utilityService.batchProcess.html
@@ -10,10 +10,10 @@ necessary. Based on example found in the following article:
 <a href="http://www.nczonline.net/blog/2009/08/11/timed-array-processing-in-javascript/">Timed array processing in JavaScript</a>;</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">batchProcess(items, context, process, [callback], delay, maxItems);</pre>
+<div class="usage"><pre class="prettyprint linenums">batchProcess(items, process, context, [callback], delay, maxItems);</pre>
 <h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>items</td><td><a href="" class="label type-hint type-hint-object">Object[]</a></td><td><div class="utilityservice-batchprocess-page"><p>The entities that need to be processed.</p>
-</div></td></tr><tr><td>context</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="utilityservice-batchprocess-page"><p>this</p>
 </div></td></tr><tr><td>process</td><td><a href="" class="label type-hint type-hint-function">Function</a></td><td><div class="utilityservice-batchprocess-page"><p>Reference to the process to be executed for each of the entities.</p>
+</div></td></tr><tr><td>context</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="utilityservice-batchprocess-page"><p>this</p>
 </div></td></tr><tr><td>[callback]</td><td><a href="" class="label type-hint type-hint-function">Function</a></td><td><div class="utilityservice-batchprocess-page"><p>Function to execute when processing is complete.</p>
 </div></td></tr><tr><td>delay</td><td><a href="" class="label type-hint type-hint-number">Number</a></td><td><div class="utilityservice-batchprocess-page"><p>Number of milliseconds to delay between batches.</p>
 </div> <p><em>(default: 25)</em></p></td></tr><tr><td>maxItems</td><td><a href="" class="label type-hint type-hint-number">Number</a></td><td><div class="utilityservice-batchprocess-page"><p>Maximum number of items to process before pausing.</p>
