--- a/partials/api/Model.getAllListItems.html
+++ b/partials/api/Model.getAllListItems.html
@@ -1,5 +1,5 @@
 <h1><code ng:non-bindable="">getAllListItems</code>
-<div><span class="hint">service in module <code ng:non-bindable="">modelFactoryModel</code>
+<div><span class="hint">service in module <code ng:non-bindable="">apModelFactoryModel</code>
 </span>
 </div>
 </h1>
