--- a/partials/api/Model.html
+++ b/partials/api/Model.html
@@ -37,7 +37,7 @@ application.  Identifies field types and formats accordingly.  Also denotes if a
 <h2 id="example">Example</h2>
 <div class="example"><div class="model-page"><pre class="prettyprint linenums">
 //Taken from a fictitious projectsModel.js
-var model = new modelFactory.Model({
+var model = new apModelFactory.Model({
     factory: Project,
     list: {
         guid: '{PROJECT LIST GUID}',
