--- a/partials/api/apModalService.html
+++ b/partials/api/apModalService.html
@@ -6,8 +6,11 @@
 <div class="description"><div class="apmodalservice-page"><p>Extends a modal form to include many standard functions</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$modal">$modal</a></code>
-<div class="apmodalservice-page"><p>from Angular Bootstrap.</p>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/{object}">{object}</a></code>
+<div class="apmodalservice-page"><p>$modal From Angular Bootstrap.</p>
+</div></li>
+<li><code ng:non-bindable=""><a href="#/api/{object}">{object}</a></code>
+<div class="apmodalservice-page"><p>toastr</p>
 </div></li>
 </ul>
 </div>
