--- a/partials/api/apModalService.modalModelProvider.html
+++ b/partials/api/apModalService.modalModelProvider.html
@@ -13,7 +13,7 @@ dynamic number of arguments.</p>
 </div></td></tr><tr><td>options.templateUrl</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="apmodalservice-modalmodelprovider-page"><p>Reference to the modal view.</p>
 </div></td></tr><tr><td>options.controller</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="apmodalservice-modalmodelprovider-page"><p>Name of the modal controller.</p>
 </div></td></tr><tr><td>[options.expectedArguments]</td><td><a href="" class="label type-hint type-hint-string">string[]</a></td><td><div class="apmodalservice-modalmodelprovider-page"><p>First argument name should be the item being edited.</p>
-</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-promise">promise</a></td><td><div class="apmodalservice-modalmodelprovider-page"><p>openModal</p>
+</div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apmodalservice-modalmodelprovider-page"><p>Function which returns openModal that in turn returns a promise.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="apmodalservice-modalmodelprovider-page"><pre class="prettyprint linenums">
