--- a/docs/partials/api/dataService.html
+++ b/docs/partials/api/dataService.html
@@ -7,4 +7,16 @@
 <p>For additional information on many of these web service calls, see Marc Anderson&#39;s SPServices documentation
  <a href="http://spservices.codeplex.com/documentation">http://spservices.codeplex.com/documentation</a></p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apQueueService">apQueueService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apUtilityService">apUtilityService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apFieldService">apFieldService</a></code>
+</li>
+</ul>
 </div>
