--- a/partials/api/ListItem.resolvePermissions.html
+++ b/partials/api/ListItem.resolvePermissions.html
@@ -4,7 +4,7 @@
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="listitem-resolvepermissions-page"><p>See apModelFactory.resolvePermissions for details on what we expect to have returned.</p>
+<div class="description"><div class="listitem-resolvepermissions-page"><p>See apModelService.resolvePermissions for details on what we expect to have returned.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">resolvePermissions();</pre>
