--- a/docs/partials/api/Query.html
+++ b/docs/partials/api/Query.html
@@ -36,6 +36,16 @@ queryOptions: '' +
 </div></td></tr><tr><td>model</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-page"><p>Reference to the parent model for the query.  Allows us to reference when out of
 scope.</p>
 </div></td></tr></tbody></table></div>
+<div class="member method"><h2 id="methods">Methods</h2>
+<ul class="methods"><li><h3 id="methods_searchlocalcache">searchLocalCache(value, [options])</h3>
+<div class="searchlocalcache"><div class="query-searchlocalcache-page"><p>Simple wrapper that by default sets the search location to the local query cache.</p>
+</div><h5 id="methods_searchlocalcache_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>value</td><td><a href="" class="label type-hint type-hint-object">*</a></td><td><div class="query-searchlocalcache-page"><p>Value to evaluate against.</p>
+</div></td></tr><tr><td>[options]</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="query-searchlocalcache-page"><p>Options to pass to Model.prototype.searchLocalCache.</p>
+</div></td></tr></tbody></table><h5 id="methods_searchlocalcache_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object|object[]</a></td><td><div class="query-searchlocalcache-page"><p>Either the object(s) that you&#39;re searching for or undefined if not found.</p>
+</div></td></tr></table></div>
+</li>
+</ul>
+</div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="query-page"><pre class="prettyprint linenums">
 // Query to retrieve the most recent 25 modifications
