--- a/partials/api/Model.html
+++ b/partials/api/Model.html
@@ -13,23 +13,21 @@ Provides the Following
 - adds &quot;addNewItem&quot; function</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">Model(options);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><p>Object containing optional params.</p>
-</div></td></tr><tr><td>options.factory</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><ul>
-<li>Constructor function for individual list items.</li>
-</ul>
-</div> <p><em>(default: StandardListItem)</em></p></td></tr><tr><td>options.list</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><ul>
+<div class="usage"><pre class="prettyprint linenums">Model(config);</pre>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>config</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><p>Object containing optional params.</p>
+</div></td></tr><tr><td>[config.factory</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><p>= apListItemFactory.createGenericFactory()] - Constructor function for individual list items.</p>
+</div></td></tr><tr><td>config.list</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="model-page"><ul>
 <li>Definition of the list in SharePoint; This object will
 be passed to the list constructor to extend further</li>
 </ul>
-</div></td></tr><tr><td>options.list.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
+</div></td></tr><tr><td>config.list.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
 <li>List name, no spaces.  Offline XML file will need to be
 named the same (ex: CustomList so xml file would be /dev/CustomList.xml)</li>
 </ul>
-</div></td></tr><tr><td>options.list.guid</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
+</div></td></tr><tr><td>config.list.guid</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="model-page"><ul>
 <li>Unique SharePoint ID (ex: &#39;{3DBEB25A-BEF0-4213-A634-00DAF46E3897}&#39;)</li>
 </ul>
-</div></td></tr><tr><td>options.list.customFields</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="model-page"><ul>
+</div></td></tr><tr><td>config.list.customFields</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="model-page"><ul>
 <li>Maps SharePoint fields with names we&#39;ll use within the
 application.  Identifies field types and formats accordingly.  Also denotes if a field is read only.</li>
 </ul>
