--- a/partials/api/apDataService.html
+++ b/partials/api/apDataService.html
@@ -1,9 +1,9 @@
-<h1><code ng:non-bindable="">dataService</code>
+<h1><code ng:non-bindable="">apDataService</code>
 <div><span class="hint"></span>
 </div>
 </h1>
 <div><h2 id="description">Description</h2>
-<div class="description"><div class="dataservice-page"><p>Handles all interaction with SharePoint web services</p>
+<div class="description"><div class="apdataservice-page"><p>Handles all interaction with SharePoint web services</p>
 <p>For additional information on many of these web service calls, see Marc Anderson&#39;s SPServices documentation
  <a href="http://spservices.codeplex.com/documentation">http://spservices.codeplex.com/documentation</a></p>
 </div></div>
