--- a/partials/api/angularPoint.apUtilityService.html
+++ b/partials/api/angularPoint.apUtilityService.html
@@ -7,34 +7,7 @@
 <div class="description"><div class="angularpoint-aputilityservice-page"><p>Provides shared utility functionality across the application.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_attrtojson">attrToJson(value, objectType, options)</h3>
-<div class="attrtojson"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-attrtojson-page"><p>Converts a SharePoint string representation of a field into the correctly formatted JavaScript version
-based on object type.</p>
-</div><h5 id="methods_attrtojson_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>value</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-attrtojson-page"><p>SharePoint string.</p>
-</div></td></tr><tr><td>objectType</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-attrtojson-page"><p>The type based on field definition.
-Options:[
- DateTime,
- Lookup,
- User,
- LookupMulti,
- UserMulti,
- Boolean,
- Integer,
- Float,
- Counter,
- MultiChoice,
- Currency,
- Number,
- Calc,
- JSON,
- HTML,
- Text [Default]
-]</p>
-</div> <p><em>(default: 'Text')</em></p></td></tr><tr><td>options</td><td><a href="" class="label type-hint type-hint-obj">obj</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-attrtojson-page"><p>Reference to the parent list item which can be used by child constructors.</p>
-</div></td></tr></tbody></table><h5 id="methods_attrtojson_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">*</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-attrtojson-page"><p>The formatted JavaScript value based on field type.</p>
-</div></td></tr></table></div>
-</li>
-<li><h3 id="methods_batchprocess">batchProcess(items, process, context, delay, maxItems)</h3>
+<ul class="methods"><li><h3 id="methods_batchprocess">batchProcess(items, process, context, delay, maxItems)</h3>
 <div class="batchprocess"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>We REALLY don&#39;t want to lock the user&#39;s browser (blocking the UI thread) while iterating over an array of
 items and performing some process on them.  This function cuts the process into as many 50ms chunks as are
 necessary. Based on example found in the following article:
@@ -105,39 +78,6 @@ apUtilityService.resolvePermissions('0x0000000000000010');
 </pre>
 </div></div>
 </div>
-</li>
-<li><h3 id="methods_stringifysharepointdate">stringifySharePointDate(date)</h3>
-<div class="stringifysharepointdate"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointdate-page"><p>Converts a JavaScript date into a modified ISO8601 date string using the TimeZone offset for the current user.</p>
-</div><h5 id="methods_stringifysharepointdate_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>date</td><td><a href="" class="label type-hint type-hint-date">Date</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointdate-page"><p>Valid JS date.</p>
-</div></td></tr></tbody></table><h5 id="methods_stringifysharepointdate_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointdate-page"><p>ISO8601 date string.</p>
-</div></td></tr></table><h4 id="methods_stringifysharepointdate_example">Example</h4>
-<div class="example"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointdate-page"><pre class="prettyprint linenums">'2014-05-08T08:12:18Z-07:00'</pre>
-</div></div>
-</div>
-</li>
-<li><h3 id="methods_stringifysharepointmultiselect">stringifySharePointMultiSelect(multiSelectValue, idProperty)</h3>
-<div class="stringifysharepointmultiselect"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointmultiselect-page"><p>Turns an array of, typically {lookupId: someId, lookupValue: someValue}, objects into a string
-of delimited id&#39;s that can be passed to SharePoint for a multi select lookup or multi user selection
-field.  SharePoint doesn&#39;t need the lookup values so we only need to pass the ID&#39;s back.</p>
-</div><h5 id="methods_stringifysharepointmultiselect_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>multiSelectValue</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointmultiselect-page"><p>Array of {lookupId: #, lookupValue: &#39;Some Value&#39;} objects.</p>
-</div></td></tr><tr><td>idProperty</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointmultiselect-page"><p>Property name where we&#39;ll find the ID value on each of the objects.</p>
-</div> <p><em>(default: 'lookupId')</em></p></td></tr></tbody></table><h5 id="methods_stringifysharepointmultiselect_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-stringifysharepointmultiselect-page"><p>Need to format string of id&#39;s in following format [ID0];#;#[ID1];#;#[ID1]</p>
-</div></td></tr></table></div>
-</li>
-<li><h3 id="methods_xmltojson">xmlToJson(rows, options)</h3>
-<div class="xmltojson"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>Converts an XML node set to Javascript object array. This is a modified version of the SPServices
-&quot;SPXmlToJson&quot; function.</p>
-</div><h5 id="methods_xmltojson_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>rows</td><td><a href="" class="label type-hint type-hint-array">array</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>[&quot;z:rows&quot;] XML rows that need to be parsed.</p>
-</div></td></tr><tr><td>options</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>Options object.</p>
-</div></td></tr><tr><td>options.mapping</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>[columnName: &quot;mappedName&quot;, objectType: &quot;objectType&quot;]</p>
-</div></td></tr><tr><td>options.includeAllAttrs</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>If true, return all attributes, regardless whether</p>
-</div> <p><em>(default: false)</em></p></td></tr><tr><td>[options.ctor]</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>List item constructor.</p>
-</div></td></tr><tr><td>options.throttle</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>Cut long running conversions into chunks to prevent ui performance
-hit.  The downside is most evergreen browsers can handle it so it could slow them down unnecessarily.</p>
-</div> <p><em>(default: true)</em></p></td></tr><tr><td>options.removeOws</td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>Specifically for GetListItems, if true, the leading ows_ will
-be stripped off the field name.</p>
-</div> <p><em>(default: true)</em></p></td></tr></tbody></table><h5 id="methods_xmltojson_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-array">Array</a></td><td><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-xmltojson-page"><p>An array of JavaScript objects.</p>
-</div></td></tr></table></div>
 </li>
 <li><h3 id="methods_yyyymmdd">yyyymmdd()</h3>
 <div class="yyyymmdd"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-yyyymmdd-page"><p>Convert date into a int formatted as yyyymmdd
