--- a/docs/partials/api/List.html
+++ b/docs/partials/api/List.html
@@ -7,13 +7,13 @@
 any reason to manually call.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">List(obj);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>obj</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="list-page"><p>Initialization parameters.</p>
-</div></td></tr><tr><td>obj.guid</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-page"><p>Unique SharePoint GUID for the list we&#39;ll be basing the model on
+<div class="usage"><pre class="prettyprint linenums">List(config);</pre>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>config</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="list-page"><p>Initialization parameters.</p>
+</div></td></tr><tr><td>config.guid</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-page"><p>Unique SharePoint GUID for the list we&#39;ll be basing the model on
 ex:&#39;{4D74831A-42B2-4558-A67F-B0B5ADBC0EAC}&#39;</p>
-</div></td></tr><tr><td>obj.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-page"><p>Maps to the offline XML file in dev folder (no spaces)
+</div></td></tr><tr><td>config.title</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="list-page"><p>Maps to the offline XML file in dev folder (no spaces)
 ex: &#39;ProjectsList&#39; so the offline XML file would be located at dev/ProjectsList.xml</p>
-</div></td></tr><tr><td>[obj.customFields]</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="list-page"><p>Mapping of SharePoint field names to the internal names we&#39;ll be using
+</div></td></tr><tr><td>[config.customFields]</td><td><a href="" class="label type-hint type-hint-object">object[]</a></td><td><div class="list-page"><p>Mapping of SharePoint field names to the internal names we&#39;ll be using
 in our application.  Also contains field type, readonly attribute, and any other non-standard settings.
 <pre class="prettyprint linenums">
 [
