--- a/partials/api/angularPoint.apEncodeService.html
+++ b/partials/api/angularPoint.apEncodeService.html
@@ -6,6 +6,12 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-apencodeservice-page"><p>Processes JavaScript objects and converts them to a format SharePoint expects.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apUtilityService">apUtilityService</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_createvaluepair">createValuePair(fieldDefinition, value)</h3>
 <div class="createvaluepair"><div class="angularpoint-apencodeservice-page angularpoint-apencodeservice-createvaluepair-page"><p>Uses a field definition from a model to properly format a value for submission to SharePoint.  Typically
