--- a/partials/api/angularPoint.apModelFactory.html
+++ b/partials/api/angularPoint.apModelFactory.html
@@ -6,6 +6,22 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-apmodelfactory-page"><p>Exposes the model prototype and a constructor to instantiate a new Model.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apModalService">apModalService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apDataService">apDataService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apListFactory">apListFactory</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apListItemFactory">apListItemFactory</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apQueryFactory">apQueryFactory</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apUtilityService">apUtilityService</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_create">create(config)</h3>
 <div class="create"><div class="angularpoint-apmodelfactory-page angularpoint-apmodelfactory-create-page"><p>Instantiates and returns a new Model.</p>
