--- a/partials/api/angularPoint.apQueryFactory.html
+++ b/partials/api/angularPoint.apQueryFactory.html
@@ -6,6 +6,16 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-apqueryfactory-page"><p>Exposes the Query prototype and a constructor to instantiate a new Query.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apModalService">apModalService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apDataService">apDataService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_create">create(config)</h3>
 <div class="create"><div class="angularpoint-apqueryfactory-page angularpoint-apqueryfactory-create-page"><p>Instantiates and returns a new Query.</p>
