--- a/partials/api/angularPoint.apUtilityService.html
+++ b/partials/api/angularPoint.apUtilityService.html
@@ -6,6 +6,10 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-aputilityservice-page"><p>Provides shared utility functionality across the application.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_batchprocess">batchProcess(items, process, context, delay, maxItems)</h3>
 <div class="batchprocess"><div class="angularpoint-aputilityservice-page angularpoint-aputilityservice-batchprocess-page"><p>We REALLY don&#39;t want to lock the user&#39;s browser (blocking the UI thread) while iterating over an array of
