--- a/partials/api/angularPoint.apDecodeService.html
+++ b/partials/api/angularPoint.apDecodeService.html
@@ -6,6 +6,16 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-apdecodeservice-page"><p>Processes the XML received from SharePoint and converts it into JavaScript objects based on predefined field types.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apUtilityService">apUtilityService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apQueueService">apQueueService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_attrtojson">attrToJson(value, objectType, [options], options)</h3>
 <div class="attrtojson"><div class="angularpoint-apdecodeservice-page angularpoint-apdecodeservice-attrtojson-page"><p>Converts a SharePoint string representation of a field into the correctly formatted JavaScript version
