--- a/partials/api/angularPoint.apListFactory.html
+++ b/partials/api/angularPoint.apListFactory.html
@@ -6,6 +6,12 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-aplistfactory-page"><p>Exposes the List prototype and a constructor to instantiate a new List.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apConfig">apConfig</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apFieldService">apFieldService</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_create">create(config)</h3>
 <div class="create"><div class="angularpoint-aplistfactory-page angularpoint-aplistfactory-create-page"><p>Instantiates and returns a new List.</p>
