--- a/partials/api/angularPoint.apListItemFactory.html
+++ b/partials/api/angularPoint.apListItemFactory.html
@@ -6,6 +6,14 @@
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="angularpoint-aplistitemfactory-page"><p>Exposes the ListItem prototype and a constructor to instantiate a new ListItem.</p>
 </div></div>
+<h2 id="dependencies">Dependencies</h2>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/angularPoint.apCacheService">apCacheService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apDataService">apDataService</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/angularPoint.apUtilityService">apUtilityService</a></code>
+</li>
+</ul>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_create">create()</h3>
 <div class="create"><div class="angularpoint-aplistitemfactory-page angularpoint-aplistitemfactory-create-page"><p>Instantiates and returns a new ListItem.</p>
